Add created_at propery to project model. Defined recentProjects remote method

--- a/common/models/project.json
+++ b/common/models/project.json
@@ -26,6 +26,9 @@
     "url": {
       "type": "string",
       "required": false
+    },
+    "created_at": {
+      "type": "date"
     }
   },
   "validations": [],
